--- a/4.怪物猎人游戏项目/css/app.css
+++ b/4.怪物猎人游戏项目/css/app.css
@@ -92,3 +92,22 @@ button {
 #give-up:hover {
     background-color: #c7c7c7;
 }
+.overlay{
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0; 
+    background-color: rgba(0,0,0,.5);
+}
+.toast{
+    position: absolute; 
+    width: 300px; 
+    height: 150px;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0; 
+    margin: auto;
+    background-color: #fff;
+}
